# ecl-mos22-informatique-graphique

./: .gitignore  CMakeLists.txt  InformatiqueGraphique  Makefile  README.md  main.cpp
.github/workflows/: md-to-pdf.yml
annexes/: integral.py
scripts/: compile.sh
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h  README.md
src/Environment/: Environment.cpp  Environment.h  README.md
src/Mesh/: TriangleIndices.cpp  TriangleIndices.h  TriangleMesh.cpp  TriangleMesh.h
src/Object/: Object.h
src/Random/: Random.cpp  Random.h
src/Ray/: README.md  Ray.cpp  Ray.h
src/Sphere/: README.md  Sphere.cpp  Sphere.h
src/Vector/: README.md  Vector.cpp  Vector.h
